--- a/FRONT/register.html
+++ b/FRONT/register.html
@@ -5,45 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <style>
-        html,
-        body {
-        height: 100%;
-        }
 
-        body {
-        display: flex;
-        align-items: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-        }
-
-        .form-signin {
-        width: 100%;
-        max-width: 330px;
-        padding: 15px;
-        margin: auto;
-        }
-
-
-    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 
-<body class="text-center">
-
-    <main class="form-signin">
+<body class="text-center row d-flex justify-content-center align-items-center" style="height: 90vh;">
+    <main class="form-signin col-2">
         <form class=" d-flex flex-column justify-content-center">
           <h1 class="h3 mb-3 fw-normal w-90">Please register in</h1>
       
           <div class="form-floating m-1">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="email" class="form-control" id="floatingInput" placeholder="">
             <label for="floatingInput">Email address</label>
           </div>
           <div class="form-floating m-1">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="">
             <label for="floatingPassword">Password</label>
           </div>
 
